--- a/_posts/2021-06-29-360.md
+++ b/_posts/2021-06-29-360.md
@@ -11,7 +11,7 @@ tags: 笔经面经
 
 ​	2021年6月28日晚上收到笔试邮件，在6月30日（周三）下午两点前完成笔试。于是，就不拖沓了，今天（6月29日）上午就给他干了，算法恐惧者表示，早晚都是*，干就完事了！
 
-​	我做的事技术综合A。
+​	我做的是技术综合A。
 
 - 选择题
 
@@ -22,7 +22,6 @@ tags: 笔经面经
 - 编程题
 
   两道编程题40分。真的太菜了，笔试黑洞，真做不来，两道题都是27%。。。
-  
 ```
   1. 输入是一个字符串，要求把所有的ab转换为bba，然后输出
     题目的有一个难点是某一次转换会对后面的字符串有影响。
