增加关于排它锁和共享锁的部分

--- a/_posts/2021-06-30-SQL语句与MySQL基础原理.md
+++ b/_posts/2021-06-30-SQL语句与MySQL基础原理.md
@@ -734,9 +734,13 @@ where location_id=1700
 
 （1）共享锁--读锁
 
-多个客户在同一时刻可以同时读取同一个资源，互不干扰。
+- 共享锁（Share Locks，简记为S）又被称为读锁，其他用户可以并发读取数据，但任何事务都不能获取数据上的排他锁，直到已释放所有共享锁。
+
+- 共享锁(S锁)又称为读锁，若事务T对数据对象A加上S锁，则事务T只能读A；**其他事务只能再对A加S锁，而不能加X锁，直到T释放A上的S锁**。这就保证了其他事务可以读A，但在T释放A上的S锁之前不能对A做任何修改。
 
 （2）排他锁--写锁
+
+- 排它锁（(Exclusive lock,简记为X锁)）又称为写锁，**若事务T对数据对象A加上X锁，则只允许T读取和修改A，其它任何事务都不能再对A加任何类型的锁，直到T释放A上的锁**。它防止任何其它事务获取资源上的锁，直到在事务的末尾将资源上的原始锁释放为止。在更新操作(INSERT、UPDATE 或 DELETE)过程中始终应用排它锁。
 
 - 一个写锁会阻塞其他的写锁和读锁
 - 写锁比读锁有更高的优先级
