--- a/_posts/2021-06-30-SQL语句与MySQL基础原理.md
+++ b/_posts/2021-06-30-SQL语句与MySQL基础原理.md
@@ -326,6 +326,7 @@ where location_id=1700
 
 <img src="/../assets/MySQL/1240-20210630204744862.png" alt="image.png" style="zoom:50%;" />
 <img src="/../assets/MySQL/1240-20210630204744875.png" alt="image.png" style="zoom:50%;" />
+
 ### （3）删除数据
 
 <img src="/../assets/MySQL/1240-20210630204744888.png" alt="image.png" style="zoom:50%;" />
@@ -452,7 +453,8 @@ where location_id=1700
 查询返回的记录太多了，查看起来很不方便，怎么样能够实现分页查询呢？
 - 分页原理
   所谓分页显示，就是将数据库中的结果集，一段一段显示出来需要的条件
-  ####（2）分页实现
+
+#### 分页实现
   <img src="/../assets/MySQL/1240-20210630204745225.png" style="zoom:50%;" />
 
 ## 事物
@@ -478,7 +480,9 @@ where location_id=1700
 事务的隔离性是指一个事务的执行不能被其他事务干扰，即一个事务内部的操作及使用的数据对并发的其他事务是隔离的，并发执行的各个事务之间不能互相干扰。
 - 持久性（Durability）
 持久性是指一个事务一旦被提交，它对数据库中数据的改变就是永久性的，接下来的其他操作和数据库故障不应该对其有任何影响
-###1.10.3 事物的使用
+
+### 事物的使用
+
 - 以第一个 DML 语句的执行作为开始
 - 以下面的其中之一作为结束: 
 `COMMIT 或 ROLLBACK 语句`
@@ -519,6 +523,7 @@ where location_id=1700
 ### 概念
 
 （1）什么是视图
+
 <img src="/../assets/MySQL/1240-20210630204745253.png" style="zoom:50%;" />
 （2）视图的好处
 
@@ -573,14 +578,21 @@ where location_id=1700
 <img src="/../assets/MySQL/1240-20210630204745355.png" style="zoom:50%;" />
 
 - 举例使用场景：
+
 <img src="/../assets/MySQL/1240-20210630204745368.png" alt="image.png" style="zoom:50%;" />
+
 ## 流程控制
 
 （1）case结构——作为表达式
+
 <img src="/../assets/MySQL/1240-20210630204745352.png" style="zoom:50%;" />
+
 （2）case结构——作为独立的语句
+
 <img src="/../assets/MySQL/1240-20210630204745382.png" style="zoom:50%;" />
+
 （3）循环结构
+
 <img src="/../assets/MySQL/1240-20210630204745392.png" style="zoom:50%;" />
 
 ## Sql语句训练
@@ -593,11 +605,11 @@ where location_id=1700
 
 ### leetcode627
 
-<img src="/../assets/MySQL/1240-20210630204745427.png" style="zoom: 67%;" />
+<img src="/../assets/MySQL/image-20210707175249365.png" alt="image-20210707175249365" style="zoom:30%;" />
 
 ### leetcode620
 
-<img src="/../assets/MySQL/1240-20210630204745427-5057265.png" style="zoom:67%;" />
+<img src="/../assets/MySQL/image-20210707175356772.png" alt="image-20210707175356772" style="zoom:30%;" />
 
 ### leetcode596
 
@@ -608,8 +620,7 @@ where location_id=1700
 
 ### leetcode196
 
-<img src="https://upload-images.jianshu.io/upload_images/24777208-01071e5687220113.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" style="zoom: 67%;" />
-<img src="/../assets/MySQL/1240-20210630204745435.png" style="zoom:67%;" />
+<img src="/../assets/MySQL/image-20210707175459149.png" alt="image-20210707175459149" style="zoom:30%;" />
 
 ### leetcode175
 
@@ -636,7 +647,7 @@ where location_id=1700
 
 ### leetcode177
 
-<img src="/../assets/MySQL/1240-20210630204745474.png" style="zoom:67%;" />
+<img src="/../assets/MySQL/image-20210707175646902.png" alt="image-20210707175646902" style="zoom:30%;" />
 
 ### leetcode178
 
